kubedefs/rmqdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprormq
  labels:
    app: vprormq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
      labels:
        app: vprormq
    spec:
      containers:
      - name: vprormq
        image: rabbitmq:latest
        ports:
        - name: vprormq-port
          containerPort: 5672
        env:                 # <--- Must be aligned with 'ports'
        - name: RABBITMQ_DEFAULT_PASS
          valueFrom:
            secretKeyRef:
              name: app-secret
              key: rmq-pass
        - name: RABBITMQ_DEFAULT_USER
          value: guest
