kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq01
spec:
  selector:
    app: vprormq
  ports:
  - port: 5672
    targetPort: vprormq-port
    protocol: TCP 
  type: ClusterIP
