kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kube.devopswithrohit.online
    http:
      paths:
      - path: /                # Added dash and 'path' key
        pathType: Prefix       # Fixed capital 'T'
        backend:
          service:
            name: vproapp-service
            port:
              number: 8080
